--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">GraphCoin</string>
-    <string name="refresh">Refresh</string>
-    <string name="err_message">Can\'t fetch actual data from server. Please, check network connection.</string>
+    <string name="last_known_price" formatted="false">%s\nBitcoin price:%s</string>
+    <string name="err_message">Can\'t fetch actual data from server.</string>
+    <string name="description">This data may be irrelevant</string>
     <string name="month">1 month</string>
     <string name="half_year">Half year</string>
     <string name="year">Year</string>
